monitoring/base/kube-prom-stack/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "ca-issuer"
    #external-dns.alpha.kubernetes.io/hostname: grafana.lab.local
spec:
  rules:
    - host: grafana.home.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.home.lab
      secretName: grafana-tls
